# BBS-ISS-Prototype-DMU

./: .gitignore  .gitmodules  BBS_LIBRARY_FIX.md  BLINDED_COMMITMENT_NOTE.md  Dockerfile  PROTOCOL_FLOWS.md  README.md  docker-compose.yml  pyproject.toml  setup.sh
reference/: main.txt
src/bbs_iss/demo/: README.md  demo_configuration.py  flask_demo_setup.py
src/bbs_iss/endpoints/: README.md  demo_setup.py  endpoint.py  flask_endpoint.py  flask_listener.py  listener.py  loopback.py  orchestrator.py  trail.py
src/bbs_iss/entities/: README.md  entity.py  holder.py  issuer.py  registry.py  verifier.py
src/bbs_iss/exceptions/: README.md  exceptions.py
src/bbs_iss/interfaces/: README.md  credential.py  exceptions.py  requests_api.py
src/bbs_iss/ui/: README.md
src/bbs_iss/utils/: README.md  cache.py  utils.py
src/entities/: issuer.py
testing/: README.md  bootstrapping_test.py  demo.ipynb  demo.py  flask_demo.py  issuance-test.py  orch_demo.py  playground.ipynb  reissuance-test.py  ui_check.py  ui_test.py  vp-test.py
testing/unit/: README.md  test_attributes.py  test_credential.py  test_issuance_flow.py  test_participant_states.py  test_verifiable_presentation.py  test_vp_flow.py
testing/unit/entities/: test_bitstring_manager.py  test_holder.py  test_issuer.py  test_registry.py  test_verifier.py
testing/unit/flows/: test_error_handling.py  test_flask_transport.py  test_holder_resolution.py  test_issuance.py  test_orchestrator.py  test_orchestrator_edge_cases.py  test_presentation_flow.py  test_registry_protocol.py  test_reissuance.py  (+4 more)
(+38 files in other folders)
