[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bbs-iss-prototype-dmu"
version = "1.0.0"
description = "Final Year Project. Full SSI credential lifecycle with bbs+ signatures."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ilya Smut", email = "ilya.smut.off.g@gmail.com" }
]
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "freezegun"
]

[tool.setuptools.packages.find]
where = ["src"]
